20120424
	utils/cc/Posix.c and utils/c2l/Posix.c: correct definition of mydup for POSIX dup/dup2
	libbio/bprint.c error handling if flush or print fails
20120305
	add -I$ROOT/(Plan9|Inferno)/include to CFLAGS in mkfiles/^(mkfile-Plan9* mkfile-Inferno*)
		change specific object type to $OBJTYPE in the same
	libmath/fdlibm/fdlibm.h and libmath/dtoa.c, if USE_FPdbleword defined, use FPdbleword to crack doubles into integers
20120304
	rabin(2) added (preliminary)
20120213
	styxservers: add .error operation (preliminary)
20120116
	lib9.h: internally rename qsort as infqsort to avoid C library clash
	lib9/qsort.c: include lib9.h
	lib9/mkfile: move qsort to IMPORTFILES from COMMONFILES
20120103
	avoid re-defining isnan; use isNaN instead
20111231
	Linux/*/include/emu.h adjustments for USE_PTHREADS for non-x86 processors
20111221
	add `...` uninterpreted string literals to limbo/lex.c, appl/cmd/limbo/lex.b
20111215
	liblogfs,libnandfs: use logfsos.h (added to include) to make library source independent of os
	add fonts/vera
	add fonts/courier
20111214
	change Linux port to use pthreads instead of clone directly
	emu/Linux: rename os.c to os-clone.c; rename osp.c to os.c
	emu/Linux/mkfile: remove -lrt, add kproc-pthreads.$O
	Linux/*/include: define USE_PTHREADS
	Linux/386/include/emu.h: increase KSTACK to 32k for Linux gethost* functions
20111003
	libinterp/heap.c:/^dtype discount size of map [issue 258]
20110820
	emu/*/devfs.c, emu/port/devfs-posix.c - stubs for osdisksize, Linux implementation of osdisksize
	emu/port/devfs-posix.c - also try SOCK_DGRAM for AF_UNIX [issue 269]
20110819
	appl/cmd/mk/mk.b - use raise "fail:..." for exit status [issue 268]
20110629
	change x86 getcallerpc to avoid use of %ebp [issue 266]
	change type of getcallerpc to uintptr from ulong
20110619
	emu/port/devfs-posix.c: put major/minor st_dev into path without mapping (with luck)
	emu/port/kproc-pthreads.c: ensure pthread stack is at least PTHREAD_STACK_MIN (plus slop)
20110526